# ChangeLog for dev-libs/stfl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/stfl/ChangeLog,v 1.34 2012/01/11 12:43:35 radhermit Exp $

  11 Jan 2012; Tim Harder <radhermit@gentoo.org> stfl-0.22.ebuild:
  Fix building ruby support (bug #395569) and update to EAPI 4.

*stfl-0.22 (01 Nov 2011)

  01 Nov 2011; Tim Harder <radhermit@gentoo.org> +stfl-0.22.ebuild,
  +files/stfl-0.22-soname-symlink.patch:
  Version bump. Add static-libs use flag.

  13 Sep 2011; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Take over as maintainer.

  13 Sep 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #225633

  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  stfl-0.21.ebuild:
  Fix dependencies (bug #336589).

  24 Jun 2010; Christoph Mende <angelos@gentoo.org> stfl-0.21.ebuild:
  Stable on amd64 wrt bug #318317

  15 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  stfl-0.21.ebuild:
  Set SUPPORT_PYTHON_ABIS (bug #312203). Respect LDFLAGS during building libstfl.so.

  15 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  stfl-0.19.ebuild:
  Delete deprecation warnings.

  05 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> stfl-0.21.ebuild:
  x86 stable wrt bug #318317

  04 Apr 2010; Thomas Anderson <tanderson@gentoo.org> stfl-0.21.ebuild:
  Fix usage of python.eclass, thanks to Arfrever for mentioning it.

*stfl-0.21 (03 Apr 2010)

  03 Apr 2010; Thomas Anderson <tanderson@gentoo.org> +stfl-0.21.ebuild,
  +files/stfl-0.21-python.patch:
  Add dev-libs/stfl-0.21, thanks to Tim Harder <radhermit@gmail.com> in bug
  #296735 for initial ebuild updates and patches.

  30 Aug 2009; Thomas Anderson <tanderson@gentoo.org> stfl-0.19.ebuild:
  stable amd64, bug 281352

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org>
  files/stfl-0.19-multilib.patch, stfl-0.19.ebuild: