@@ -2,21 +2,22 @@
 Hash: SHA512
 
 AUX stfl-0.21-python.patch 1936 RMD160 fce9de74ac0cab5abe0e9b2d53c82cad602a5be1 SHA1 1ae240823806120b94c5cda5ba96b57e289bd730 SHA256 905260dbd13b4ce374d95ced9ea5d443fc44de0f14c0f1140fc8c7cead6c1f06
+AUX stfl-0.22-ruby-sharedlib.patch 735 RMD160 af0f7296fc330e6957eb0cbe984a461fdeb81cbe SHA1 cb9c75422abc00f9e510c7db41e4d24f2a7544e6 SHA256 743a53291cdc25646044488a2171bc127bc80636e36fe25e8c5372738e4dade0
 AUX stfl-0.22-soname-symlink.patch 444 RMD160 10a21f385f10695d2c19ed8b9122ba273a78edd4 SHA1 aa7aa0d2c6b92b5b0b12107ec3d9a458c8e60527 SHA256 312f0b9dd2c628531b139614d22806eec16f2587e83dc33ba28a093a3af63d38
 DIST stfl-0.21.tar.gz 41093 RMD160 d8b56cc97b4d76adba8034ce9bbae631e6e9d17e SHA1 0313eafa1fe4dcfea1f2edd34d453baaa46df277 SHA256 bf0ead0a66b635602222bc9089414b99f99081b956c92baf77699d283bcc88eb
 DIST stfl-0.22.tar.gz 41412 RMD160 d76a0ef7a86efcf7c4b25033958f161a7dcc3220 SHA1 226488be2b33867dfb233f0fa2dde2d066e494bd SHA256 2dddafd331e61ad04baf1251ccecb3a69feaf99880dd75155be8423c1cc55418
 EBUILD stfl-0.21.ebuild 2734 RMD160 d4f33d65571629944987585832bddc1c19558da4 SHA1 4a34f9cb5ca40b1d66b0ea58da18e4f5217c90c5 SHA256 1176e6dfd333d7d9c4011d99d4df346f15ac487dd08517f69cd1a585a2fd3936
-EBUILD stfl-0.22.ebuild 2829 RMD160 3dd8b4f885529a25143a40371a8bf3e4efcc8454 SHA1 7bad216e85fb2416f2a64bd04076cf0817b71d5c SHA256 1aeb9da887b6852677bd587c3d995d06e7edfc10e362f57979b2119e197bfc3d
-MISC ChangeLog 5299 RMD160 c15c5c73e5bb475f05a787ab10011d0f58251281 SHA1 5c100dfd24759b19cbeb63aa35a54f0934f6de28 SHA256 7eed2474599db026566c243b6429077fc28b1f7bafedb1a0a199d30000f6cb0d
+EBUILD stfl-0.22.ebuild 2901 RMD160 0463bd4f33cd61b694e3e5719f3131b03d3b7518 SHA1 b5c453d0c53f260577cfbde04e3205e492c5d032 SHA256 e660afd97966df7c0944ade683fb4cd73129f914beff51d0c8b3993f2ba0ff71
+MISC ChangeLog 5542 RMD160 c2064570d3745a38d204465de79285c43b8d28c5 SHA1 b9b8f0595892b370468dc5fbde08656bb5c3a593 SHA256 cabea9a57e0b78bac2561defd13ee3f28afa6ec23be1250af3e550ef523ef894
 MISC metadata.xml 900 RMD160 c1bf53da4498fdeff04e9cb17e9e370541fc8d45 SHA1 fc78cd937e2970b6dafeaa57df7726f65e858f5f SHA256 b23c1d0b55c1ff86ed4397f13b8272e52efc4ac826817694c9030ca72ccd6d74
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPDYQAAAoJEEqz6FtPBkyjSg0H/RpiKbKZG/NaNrtZybb5gMvU
-JZkYukeqKkNAiJT3qYwd2T34bnFHEFQeQ5RjM3wZPlg6OkAZJDB8yXm7zytjENB+
-fBmB4VjcU8tdqvpDzYt6/vO6+ihkGusFHrJFnNTeN9dwMdV+wuWMAjairMcE2bWW
-OdEYBL926nls5tqoDLpjn2FBARz9OjHNsHoNsG2GuVS8x8/MohXg6ySWCdB1H+Sz
-cEQbo367bCP+NJsHJ3pm28hiuF0T4Ktj+5lRm2ICmZLYRWMjLh+wHsaHxk2MzlPK
-mcFwyXF2i8+5a7UJMuuYPV7GMdRdrqTSIP9CPSJ6b5asjuHvdWivQfpbaFXMgJs=
-=t5LJ
+iQEcBAEBCgAGBQJPDcH9AAoJEOTDgjZ80txdSsEH/1E34vC6bfAbh7myxmZxityA
+0pO0fFbSBB0721lTV/GV5nDAn8WlZI7iHqw6zmTObemeUvil7kX/eSsBVWeFh/YP
+En4S7Fv1lseFlzRjOn6H2x39yZ0JXxYrTtJ0bD1fg9XTcNrDJ1X+C4c3wj+LA4zX
+cUkaeyMPWgjKTnAosG2FYbxaLLhppnUOpy7mdASYYdeaZumTSfWd7iTjG7WcXy1D
+QYywbTobT+wl0H87whKvkNWa7mz0iSo6CZFtvf7bUL4SWOUA4iS/3bpmKiT0Fe+W
+RW62EhBTQK+mti9GZ7mrRoa1flzzD6zNOZvFRR94OVe82UBZ3KEvJVegcZFd0Pg=
+=YrIJ
 -----END PGP SIGNATURE-----
