@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/stfl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/stfl/ChangeLog,v 1.34 2012/01/11 12:43:35 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/stfl/ChangeLog,v 1.36 2012/01/11 17:08:07 ago Exp $
+
+  11 Jan 2012; Agostino Sarubbo <ago@gentoo.org> stfl-0.22.ebuild:
+  Stable for AMD64, wrt bug #395439
+
+  11 Jan 2012; Tim Harder <radhermit@gentoo.org> stfl-0.22.ebuild,
+  +files/stfl-0.22-ruby-sharedlib.patch:
+  Link ruby lib against shared lib.
 
   11 Jan 2012; Tim Harder <radhermit@gentoo.org> stfl-0.22.ebuild:
   Fix building ruby support (bug #395569) and update to EAPI 4.
